--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.2.41"
+    "typeorm": "^0.2.41",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -62,7 +63,7 @@
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
+    "supertest": "^6.1.6",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
